tests/fails/f1.t
if not require("fail") then return end

terra foo()
    var a : 1 + "a"
end
foo()
